Poll annotations now usable on the index page, giving us prettier display of when polls are open and whether the user can vote on one.

--- a/molly/molly/apps/sakai/templates/sakai/poll/detail.html
+++ b/molly/molly/apps/sakai/templates/sakai/poll/detail.html
@@ -10,7 +10,7 @@
   <div class="header">
     <h2>{{ poll.text }}</h2>
 
-    {% if not has_voted and multi_vote and is_open %}
+    {% if not poll.hasVoted and poll.multiVote and poll.isOpen %}
       <div class="sakai-error-message">
         <p>
           This polls allows you to select more than one response, which is as yet unsupported through this interface.
@@ -20,18 +20,18 @@
         </p>
       </div>
     {% endif %}
-    {% if not has_voted and not is_open %}
+    {% if not poll.hasVoted and not poll.isOpen %}
       <div class="sakai-error-message">
         <p>
-          {% if has_closed %}
-            You are unable to vote in this poll as it closed {{ poll.voteClose|from_sakai_timestamp|timesince }} ago.
+          {% if poll.hasClosed %}
+            You are unable to vote in this poll as it closed {{ poll.voteClose|timesince }} ago.
           {% else %}
-            This poll has not yet opened. Please try again in {{ poll.voteOpen|from_sakai_timestamp|timeuntil }}.
+            This poll has not yet opened. Please try again in {{ poll.voteOpen|timeuntil }}.
           {% endif %}
         </p>
       </div>
     {% endif %}
-    {% if not has_voted and is_open and not multi_vote %}
+    {% if not poll.hasVoted and poll.isOpen and not poll.multiVote %}
       <div class="sakai-notice-message">
         This poll closes {{ poll.voteClose|from_sakai_timestamp|timeuntil }} from now.
       </div>
