google_analytics now passed into the template using the safe filter. We can trust the developers to get it right :-).

--- a/molly/demos/molly_oxford/templates/base.html
+++ b/molly/demos/molly_oxford/templates/base.html
@@ -118,7 +118,7 @@
 {% if google_analytics %}
  <script type="text/javascript">
  var _gaq = _gaq || [];
- _gaq.push(['_setAccount', '{{ google_analytics|escapejs }}']);
+ _gaq.push(['_setAccount', '{{ google_analytics|safe }}']);
  _gaq.push(['_trackPageview']);
  (function() {
    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
