Fixed weblearn screenshots to appear all in a line.

--- a/molly/demos/molly_oxford/templates/desktop/index.html
+++ b/molly/demos/molly_oxford/templates/desktop/index.html
@@ -541,7 +541,7 @@ Learn how to use Eduroam</a></p>
     </small>
     </div>  
     
-    <div id="weblearn-oauth-login" class="align-center">
+    <div id="weblearn-oauth-login" class="span-42 align-center">
     <div class="span-10 prepend-1">
         <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/weblearn-1.png" />
         <p>1.The first page in the one-time authorisation process</p>
