--- a/molly/demos/molly_oxford/templates/desktop/index.html
+++ b/molly/demos/molly_oxford/templates/desktop/index.html
@@ -361,7 +361,7 @@ a 2D barcode below
     <li><a href="#term-date">Term Date</a></li>    
     <li><a href="#weather">Weather</a></li>
     <li><a href="#webcams">Webcams</a></li>
-    <li><a href="#weblearn">Weblearn</a></li>
+    <li><a href="#weblearn">WebLearn</a></li>
 </ul>
 </div>
 </div>
@@ -530,14 +530,14 @@ Learn how to use Eduroam</a></p>
     <a class="go-to-top" href="#features" title="scroll to top">Back to feature list</a>
     <hr />
     <div class="span-14">
-    <h3>Weblearn Mobile Preview</h3>
-    <p>With this "preview" version of Weblearn mobile you can book 'sign-up' events that have been set up by your Weblearn site manager e.g. Tutorials by a course tutor.</p>
+    <h3>WebLearn Mobile Preview</h3>
+    <p>With this "preview" version of WebLearn mobile you can book 'sign-up' events that have been set up by your WebLearn site manager e.g. Tutorials by a course tutor.</p>
     </div>
     
     <div class="span-25 prepend-1 append-2 last prepend-top">
     <small>
-    <p>We use a technology called "<a href="http://oauth.net/" title="oAuth.net link">oAuth</a>" to let you access very limited parts of Weblearn through Mobile Oxford without having to re-enter your password every time. 
-    To do this, follow the instructions on screen when you first click on the "Sign-Ups" tool (as seen in these screenshots). If at anytime you want to stop your phone having access to your Weblearn account you may stop it by using the instructions on Mobile Oxford or in <a href="http://weblearn.ox.ac.uk">Weblearn</a> follow the "My workspace"->"Trusted applications" to remove Mobile Oxford.</p>
+    <p>We use a technology called "<a href="http://oauth.net/" title="oAuth.net link">oAuth</a>" to let you access very limited parts of WebLearn through Mobile Oxford without having to re-enter your password every time. 
+    To do this, follow the instructions on screen when you first click on the "Sign-Ups" tool (as seen in these screenshots). If at anytime you want to stop your phone having access to your WebLearn account you may stop it by using the instructions on Mobile Oxford or in <a href="http://weblearn.ox.ac.uk">WebLearn</a> follow the "My workspace"->"Trusted applications" to remove Mobile Oxford.</p>
     </small>
     </div>  
     
@@ -554,7 +554,7 @@ Learn how to use Eduroam</a></p>
     
     <div class="span-10">
         <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/weblearn-3.png" />
-        <p>3. Weblearn then asks you to confirm that you want to be able to access Weblearn through Mobile Oxford.</p> 
+        <p>3. WebLearn then asks you to confirm that you want to be able to access WebLearn through Mobile Oxford.</p> 
     </div>
     
     <div class="span-10 append-1 last">
