--- a/molly/demos/molly_oxford/templates/desktop/index.html
+++ b/molly/demos/molly_oxford/templates/desktop/index.html
@@ -292,7 +292,7 @@ a 2D barcode below
 
 <div class="prepend-1 span-23 colborder">
 <div class="social-items">
-<h2><a href="http://mobileoxford.posterous.com">Blog</a></h2>
+<h2><a href="http://mobileoxford.posterous.com"/>Blog</a></h2>
 <ul>
 	{% for entry in blog_feed.entries|slice:":3" %}
 	<li>
@@ -301,7 +301,7 @@ a 2D barcode below
 	</li>
 	{% endfor %}
 </ul>
-<a href="http://mobileoxford.posterous.com">More entries&hellip;</a>
+<a href="http://mobileoxford.posterous.com/">More entries&hellip;</a>
 </div>
 
 <hr />
@@ -537,7 +537,7 @@ Learn how to use Eduroam</a></p>
     <div class="span-25 prepend-1 append-2 last prepend-top">
     <small>
     <p>We use a technology called "<a href="http://oauth.net/" title="oAuth.net link">oAuth</a>" to let you access very limited parts of WebLearn through Mobile Oxford without having to re-enter your password every time. 
-    To do this, follow the instructions on screen when you first click on the "Sign-Ups" tool (as seen in these screenshots). If at anytime you want to stop your phone having access to your WebLearn account you may stop it by using the instructions on Mobile Oxford or in <a href="http://weblearn.ox.ac.uk">WebLearn</a> follow the "My workspace"->"Trusted applications" to remove Mobile Oxford.</p>
+    To do this, follow the instructions on screen when you first click on the "Sign-Ups" tool (as seen in these screenshots). If at anytime you want to stop your phone having access to your WebLearn account you may stop it by using the instructions on Mobile Oxford or in <a href="http://weblearn.ox.ac.uk/">WebLearn</a> follow the "My workspace"->"Trusted applications" to remove Mobile Oxford.</p>
     </small>
     </div>  
     
@@ -703,12 +703,12 @@ Learn how to use Eduroam</a></p>
 <div id="footer">
 <div class="container">
 <div class="span-32">
-<p>&copy; 2010 <a href="http://www.oucs.ox.ac.uk">Oxford University Computing Services</a> <br />Mobile Oxford is a core-funded service and <a href="http://mollyproject.org">open source software</a> originally developed by OUCS under the <a href="http://jisc.ac.uk">JISC</a> funded Erewhon Project.<br />
-We use <a href="http://mollyproject.org">The Molly Project</a>: an open souce community project. Get involved or deploy at your institution by visiting <a href="http://mollyproject.org">http://mollyproject.org</a>.</p>
+<p>&copy; 2010 <a href="http://www.oucs.ox.ac.uk/">Oxford University Computing Services</a> <br />Mobile Oxford is a core-funded service and <a href="http://mollyproject.org/">open source software</a> originally developed by OUCS under the <a href="http://jisc.ac.uk/">JISC</a>-funded Erewhon Project.<br />
+We use <a href="http://mollyproject.org/">The Molly Project</a>: an open souce community project. Get involved or deploy at your institution by visiting <a href="http://mollyproject.org/">http://mollyproject.org/</a>.</p>
 </div>
 <div class="span-12 last">
-<a href="http://www.oucs.ox.ac.uk"><img src="{{ MEDIA_URL }}desktop/png/oucs-logo-small.png" width="140" height="46" alt="Oxford University Computing Services Logo" /></a>
-<a href="http://jisc.ac.uk"><img src="{{ MEDIA_URL }}desktop/png/jisc-logo-small.png" width="88" height="46" alt="Joint Information Systems Committee Logo" /></a>
+<a href="http://www.oucs.ox.ac.uk/"><img src="{{ MEDIA_URL }}desktop/png/oucs-logo-small.png" width="140" height="46" alt="Oxford University Computing Services" /></a>
+<a href="http://jisc.ac.uk/"><img src="{{ MEDIA_URL }}desktop/png/jisc-logo-small.png" width="88" height="46" alt="Joint Information Systems Committee" /></a>
 </div>
 
 <div class="span-14 append-1">
@@ -726,11 +726,11 @@ We use <a href="http://mollyproject.org">The Molly Project</a>: an open souce co
 </div>
 <div class="span-14 colborder prepend-top">
 <dl>
-    <dt><a href="http://podcasts.ox.ac.uk">OUCS Podcasting Team</a></dt>
+    <dt><a href="http://podcasts.ox.ac.uk/">OUCS Podcasting Team</a></dt>
     <dd>Access to the University of Oxford's podcasts as mirrored on their iTunesU site.</dd>
     <dt><a href="http://www.ouls.ox.ac.uk/">Oxford University Library Services</a></dt>
     <dd>Access to their Z39.50 library information system allowing us to perform library searches and combine with our geo-spatial systems to provide location-sensitive searches</dd>
-    <dt><a href="http://openstreetmap.org">The Open Street Map Community</a></dt>
+    <dt><a href="http://www.openstreetmap.org/">The Open Street Map Community</a></dt>
     <dd>Providing some of the most detailed and up to date maps of Oxford and points of interest listings.</dd> 
     <dt><a href="http://backstage.bbc.co.uk/">BBC Backstage</a></dt>
     <dd>Weather and traffic incident information</dd>
@@ -745,9 +745,9 @@ We use <a href="http://mollyproject.org">The Molly Project</a>: an open souce co
     <dt>Suggest new features:</dt>
     <dd><a href="http://m.ox.ac.uk/feature-suggestions/">Our mobile feature suggestion page (optimised for mobile devices)</a></dd>
     <dt>Join the Open Street Map community </dt>
-    <dd><a href="http://openstreetmap.org">and help improve the points of interest and maps of Oxford that we use: http://openstreetmap.org</a></dd>
+    <dd><a href="http://wiki.openstreetmap.org/wiki/Main_Page">and help improve the points of interest and maps of Oxford that we use: http://openstreetmap.org</a></dd>
     <dt>Help develop our software (the Molly Project)</dt>
-    <dd><a href="http://mollyproject.org">http://mollyproject.org</a></dd>  
+    <dd><a href="http://mollyproject.org/">http://mollyproject.org/</a></dd>  
 </dl>
 </div>
 </div>
