Fixed urlnames in places templates.

--- a/molly/molly/apps/places/templates/places/postcode.html
+++ b/molly/molly/apps/places/templates/places/postcode.html
@@ -16,7 +16,7 @@
 {% endifnotequal %}{% endfor %}
 {% endif %}
     <li class="round-bottom">
-    <a href="{% url places:entity_nearby_list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a>
+    <a href="{% url places:entity-nearby-list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a>
     </li>
 </ul>
 </div>
