--- a/molly/molly/apps/places/templates/places/update_osm.html
+++ b/molly/molly/apps/places/templates/places/update_osm.html
@@ -37,7 +37,7 @@
     </p>
     
     <p style="margin-top:0.5em;">
-      You may be interested to read <a href="{% url places:static_openstreetmap %}">further information about
+      You may be interested to read <a href="{% url places:static-openstreetmap %}">further information about
       OpenStreetMap and other ways in which one may contribute</a>.
     </p>
   </div></div>
