Moved weather icons into their app and fixed media paths for weather pages.

--- a/molly/demos/molly_oxford/templates/home/index.html
+++ b/molly/demos/molly_oxford/templates/home/index.html
@@ -54,7 +54,7 @@
                     </td>
                     <td style="width:50%;">
 
-      {% weather %}<big>Oxford: {{ weather.temperature }}&deg;C</big><img width="16" height="16" src="{{ MEDIA_URL }}png/weather/{{ weather.icon }}_small.png" alt="{{ weather.get_outlook_display|capfirst }}" height="30" width="30" style="vertical-align:middle;"/>
+      {% weather %}<big>Oxford: {{ weather.temperature }}&deg;C</big><img width="16" height="16" src="{{ MEDIA_URL }}weather/png/{{ weather.icon }}_small.png" alt="{{ weather.get_outlook_display|capfirst }}" height="30" width="30" style="vertical-align:middle;"/>
 
                     </td>
                 </tr>
