--- a/molly/molly/apps/places/templates/places/map_elements.html
+++ b/molly/molly/apps/places/templates/places/map_elements.html
@@ -1,12 +1,12 @@
 {% if zoom_controls|default_if_none:1 %}
     {% ifnotequal zoom 10 %}
         <a class="no-icon zoom-out" href="?zoom={{ zoom|add:"-1" }}" rel="nofollow">
-            <img src="{{ MEDIA_URL }}png/icons/zoom-out.png" alt="Zoom out"/>
+            <img src="{{ MEDIA_URL }}site/png/icons/zoom-out.png" alt="Zoom out"/>
         </a>
     {% endifnotequal %}
     {% ifnotequal zoom 18 %}
         <a class="no-icon zoom-in" href="?zoom={{ zoom|add:"1" }}" rel="nofollow">
-            <img src="{{ MEDIA_URL }}png/icons/zoom-in.png" alt="Zoom in"/>
+            <img src="{{ MEDIA_URL }}site/png/icons/zoom-in.png" alt="Zoom in"/>
         </a>
     {% endifnotequal %}
 {% endif %}
