Fixed reference to voted icon in sakai polls.

--- a/molly/molly/apps/sakai/templates/sakai/poll/detail.html
+++ b/molly/molly/apps/sakai/templates/sakai/poll/detail.html
@@ -71,7 +71,7 @@
           </label>
 {% else %}
           {% if option.votedFor %}
-            <img src="{{ MEDIA_URL }}png/sakai/voted.png" alt="&#10007;"/>
+            <img src="{{ MEDIA_URL }}sakai-polls/png/voted.png" alt="&#10007;"/>
           {% endif %}
 {% endif %}
         </td>
