Fixed broken urlname.

--- a/molly/molly/apps/podcasts/templates/podcasts/index.html
+++ b/molly/molly/apps/podcasts/templates/podcasts/index.html
@@ -8,7 +8,7 @@
     <p>It looks like you're using an iPod/iPhone! You can also get all the University's podcasts via your iTunes U app, which gives you extra features like downloads for later listening/viewing.</p>
     
     <p>Please note that this will close Safari.</p>
-    <form method="post" action="{% url podcasts:itunesu_redirect %}">
+    <form method="post" action="{% url podcasts:itunesu-redirect %}">
     {% comment %}<p><input type="checkbox" name="remember" id="remember"/>
        <label for="remember">
        Remember this preference in future.
