Added a ul class which was making li elements \'disappear\' when multiple locations were returned for a person\'s location

--- a/molly/molly/geolocation/templates/geolocation/update_location_confirm.html
+++ b/molly/molly/geolocation/templates/geolocation/update_location_confirm.html
@@ -11,7 +11,7 @@
 {% endifnotequal %}
 {% endif %}
 
-<ul>
+<ul class="link-list">
 {% for result in results %}
     <li>
         <form method="post" action="{% url geolocation:index %}" class="submit-location-form">
