Adding some commenting to contact app

--- a/molly/molly/apps/contact/templates/contact/result_list.html
+++ b/molly/molly/apps/contact/templates/contact/result_list.html
@@ -1,3 +1,5 @@
+{# Search form results list #}
+
 {% extends "contact/base.html" %}{% load portal_misc %}
 
 {% block title %}m.ox | Contact search{% if query %}: {{ query }}{% endif %}{% endblock %}
