--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -9,9 +9,9 @@
     <div id="index-title">
 		<!-- <img src="{{ MEDIA_URL }}png/headers/{{ device.resolution_width|header_width }}.png" alt="Mobile Oxford"/> -->
 		{% ifequal style_group "dumb" %}
-		    <img src="{{ MEDIA_URL }}png/new/logos/logo-90x55.jpg" alt="Mobile Oxford">
+		    <img src="{{ MEDIA_URL }}site/png/new/logos/logo-90x55.jpg" alt="Mobile Oxford">
 		{% else %}
-            <img src="{{ MEDIA_URL }}png/new/logos/logo-128x51-TRMargin-5px.png" alt="Mobile Oxford"/>
+            <img src="{{ MEDIA_URL }}site/png/new/logos/logo-128x51-TRMargin-5px.png" alt="Mobile Oxford"/>
         {% endifequal %}
     </div>
     <div id="index-search">
@@ -55,7 +55,7 @@
                     </td>
                     <td style="width:50%;">
                         
-      {% weather %}<big>Oxford: {{ weather.temperature }}&deg;C</big><img src="{{ MEDIA_URL }}png/weather/{{ weather.icon }}_small.png" alt="{{ weather.get_outlook_display|capfirst }}" height="30" width="30" style="vertical-align:middle;"/>
+      {% weather %}<big>Oxford: {{ weather.temperature }}&deg;C</big><img src="{{ MEDIA_URL }}weather/png/{{ weather.icon }}_small.png" alt="{{ weather.get_outlook_display|capfirst }}" height="30" width="30" style="vertical-align:middle;"/>
       
                     </td>
                 </tr>
@@ -80,8 +80,8 @@
         {% else %}
     <div class="content" style="margin:8px;">
     
-        <img src="{{ MEDIA_URL }}png/oucs-logo-small.png" alt="Oxford University Computing Services"/>
-        <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="University of Oxford" />
+        <img src="{{ MEDIA_URL }}site/png/oucs-logo-small.png" alt="Oxford University Computing Services"/>
+        <img src="{{ MEDIA_URL }}site/gif/brandmark.gif" alt="University of Oxford" />
     </div>
         {% endifequal %}
     </div>
