Modified news pages to share podcast page styles

--- a/molly/apps/feeds/templates/rss/news/index.html
+++ b/molly/apps/feeds/templates/rss/news/index.html
@@ -27,7 +27,9 @@
 
 
 <div class="section">
-    <h2>Feeds</h2>
+  <div class="header">
+	<h2>Feeds</h2>
+  </div>
     <ul class="link-list">
 {% for feed in feeds %}
         <li {% if forloop.last %}class="round-bottom"{% endif %}>
