--- a/molly/apps/places/templates/places/metadata/ldb.html
+++ b/molly/apps/places/templates/places/metadata/ldb.html
@@ -1,37 +1,73 @@
-{% load molly_utils %}{% if entity.metadata.ldb %}
+{% load molly_utils %}{% if train_station.metadata.ldb %}
 
-  <h2>Live departure board - {{ entity.metadata.ldb.generatedAt|date:"G:i:s" }}</h2>
-<div class="pad-5">
-    {% for message in entity.metadata.ldb.nrccMessages.message %}
-      <div class="bubble pad-10">
-      {{ message|sanitize_html }}
-      </div>
+<div class="section">
+  <div class="header">
+    <h2>{{ train_station.title }} (departures) - {{ train_station.metadata.ldb.generatedAt|date:"H:i:s" }}</h2>
+  </div>
+  
+  {% if train_station.metadata.ldb.nrccMessages.message %}
+  <ul class="content-list no-round-bottom">
+    {% for message in train_station.metadata.ldb.nrccMessages.message %}
+      <li>{{ message|sanitize_html }}</li>
     {% endfor %}
-<table class="real-time-information">
+  </ul>
+  {% endif %}
+
+  <table class="content">
     <thead>
-        <tr>
-            <th>Destination</th>
-            <th>Plat.</th>
-            <th>Due</th>
-            <th>Expected</th>
-        </tr>
+      <tr>
+        <th>Destination</th>
+        {% if train_station.metadata.ldb.platformAvailable %}
+        <th>Plat.</th>
+        {% endif %}
+        <th>Due</th>
+        <th>Expected</th>
+      </tr>
     </thead>
-    <tbody id="bus_times">
-    {% for service in entity.metadata.ldb.trainServices.service %}
+    <tbody>
+      {% if train_station.metadata.ldb.error %}
         <tr>
-            <td>{{ service.destination.location.0.locationName }}{% if service.destination.location.0.via %}<br/>
-            <small>{{ service.destination.location.0.via }}</small>{% endif %}</td>
+          <td colspan="4">
+            <p>
+              There is currently a problem retrieving live departure information from the National Rail web site.
+            </p>
+            <p>
+              Departure information may still be accessed
+              <a href="http://pda.ojp.nationalrail.co.uk/en/pj/ldbboard/dep/{{ train_station.identifiers.crs }}">directly
+              from their web site</a>.
+            </p>
+          </td>
+        </tr>
+      {% else %}
+        {% for service in train_station.metadata.ldb.trainServices.service %}
+          <tr>
+            <td>
+              <a href="{{ train_station.get_absolute_url }}ldb:{{ service.serviceID }}">
+                {# This isn't that straight-forward - trains can split and go to multiple destinations #}
+                {% for location in service.destination.location %}
+                  {% if not forloop.first and not forloop.last %}, {% endif %}
+                  {% if not forloop.first and forloop.last %} &amp; {% endif %}
+                  {% if not forloop.first %}<br />{% endif %}
+                  {{ location.locationName }}
+                  {% if location.via %}<br /><small>{{ location.via }}</small>{% if not forloop.last %}<br />{% endif %}{% endif %}
+                {% endfor %}
+                {% if service.isCircularRoute %}<br /><small>(Circular Route)</small>{% endif %}</a>
+            </td>
+            {% if train_station.metadata.ldb.platformAvailable %} 
             <td>{{ service.platform }}</td>
+            {% endif %}
             <td>{{ service.std }}</td>
             <td>{{ service.etd }}</td>
-        </tr>
-    {% endfor %}
+          </tr>
+        {% empty %}
+          <tr>
+            <td colspan="4">There are currently no scheduled departures.</td>
+          </tr>
+        {% endfor %}
+      {% endif %}
     </tbody>
-</table>
+  </table>
+        
 </div>
-
-{% else %}
-
-    <h2>Map</h2>
 
 {% endif %}
