Add park and ride spaces information to the entity detail screen

--- a/molly/apps/places/templates/places/entity_detail.html
+++ b/molly/apps/places/templates/places/entity_detail.html
@@ -35,5 +35,6 @@
 
 {% include "places/metadata/oxpoints.html" %}
 {% include "places/metadata/osm.html" %}
+{% include "places/metadata/park_and_ride.html" %}
 
 {% endblock %}
