--- a/molly/favourites/templates/favourites/index.html
+++ b/molly/favourites/templates/favourites/index.html
@@ -11,10 +11,10 @@
       <tbody>
         {% for favourite in favourites %}
         <tr>
-          <td><a href="{{ favourite }}">{{ favourite }}</a></td>
+          <td><a href="{{ favourite.1 }}">{{ favourite.0 }}</a></td>
           <td>
             <form action="{% url favourites:index %}" method="post">
-                <input type="hidden" name="URL" value="{{ favourite|escape }}" />
+                <input type="hidden" name="URL" value="{{ favourite.1|escape }}" />
                 <input type="hidden" name="return_to_favourites" value="True" />
                 {% csrf_token %}
                 <input type="submit" name="unfavourite" value="Unfavourite" />
