Stop partially created polls breaking the list of polls

--- a/molly/apps/sakai/templates/sakai/poll/index.html
+++ b/molly/apps/sakai/templates/sakai/poll/index.html
@@ -29,7 +29,7 @@
         </td>
         <td>
           <div class="button">
-            <a href="{% url sakai:poll-detail poll.id %}">{% if poll.mayVote %}Vote!{% else %}View{% endif %}</a>
+            <a href="{% url sakai:poll-detail poll.pollId %}">{% if poll.mayVote %}Vote!{% else %}View{% endif %}</a>
           </div>
         </td>
       </tr>
